Updated Readme and my evaluation comments

--- a/spam_detector.ipynb
+++ b/spam_detector.ipynb
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Prediction:  Random Forest.  In general, Random Forest seems more robust than Logistic Regression in modeling connections between the predictor values and the result.  Random Forest uses predictions of numerous decision trees to make a final prediction, it handles linear and non-linear relationships between the variables, and handles high-dimensional data with less risk of overfitting.**  "
+    "**Prediction:  Since I don't know a lot about the data and don't have an opportunity to ask any clarifying quesitons, I predict Random Forest will perform better that Logistic Regression.  In general, Random Forest seems more robust than Logistic Regression in modeling connections between the predictor values and the result.  Random Forest uses predictions of numerous decision trees to make a final prediction, it handles linear and non-linear relationships between the variables, and handles high-dimensional data with less risk of overfitting.**  "
    ]
   },
   {
@@ -663,7 +663,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Create a `LogisticRegression` function\n",
-    "lr_model = LogisticRegression()\n",
+    "lr_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model\n",
     "lr_model.fit(X_train_scaled, y_train)\n",
@@ -1068,7 +1068,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Evaluation:  The Random Forest model performed better on this data than Logistic Regression.  The Random Random Forest Accuracy Score  is 0.961 and Logistic Regression Accuracy Score is 0.923.  **"
+    "***Question 1:  Which model performed better?***\n",
+    "**Answer:  The Random Forest model performed better on this data than Logistic Regression.  The Random Forest Accuracy Score is 0.961 and Logistic Regression Accuracy Score is 0.923.**\n",
+    " \n",
+    "***Question 2:  How does that compare to your prediction?***\n",
+    "**Answer:  I predicted Random Forest and the results match my prediction.**"
    ]
   },
   {
